# ayane

./: .gitignore  Cargo.toml  README.md
ayane/: Cargo.toml
ayane-cli/: Cargo.toml
ayane-cli/src/: csrgen.rs  httpsig.rs  keypair.rs  main.rs  proof.rs
ayane-cli/src/cmd/: certificate.rs  health.rs  mod.rs  provisioners.rs  rekey.rs  renew.rs  revoke.rs  roots.rs  token.rs
ayane-protocol/: Cargo.toml
ayane-protocol/src/: api.rs  crypto.rs  dpop.rs  httpsig.rs  lib.rs  problem.rs  token.rs
ayane/src/: aws.rs  bootstrap.rs  builder.rs  ca.rs  config.rs  crypto.rs  csr.rs  dpop.rs  duration.rs  e2e.rs  error.rs  http.rs  lib.rs  main.rs  san.rs  server.rs  service.rs  template.rs  testca.rs  tls.rs  x509.rs
ayane/src/authorizer/: jwk.rs  jwks.rs  jwt.rs  mod.rs
ayane/src/e2e/: jwks.rs  lifecycle.rs  mod.rs  renew.rs  roots.rs  sign.rs  webhooks.rs
ayane/src/event_sink/: eventbridge.rs  file.rs  mod.rs  stdout.rs
ayane/src/key_provider/: aws_kms.rs  file.rs  kms.rs  mod.rs
ayane/src/storage/: dynamodb.rs  mod.rs  sqlite.rs
ayane/src/webhook/: http.rs  lambda.rs  mod.rs
contrib/terraform/aws/: README.md
contrib/terraform/aws/cloudfront/: cloudfront.tf  outputs.tf  variables.tf
contrib/terraform/aws/iam/: outputs.tf  role.tf  variables.tf
contrib/terraform/aws/web/: config.tf  dynamodb.tf  main.tf  outputs.tf  variables.tf
docs/: README.md  api.md  cli.md  configuration.md  deployment.md  events.md  getting-started.md  provisioners.md  renewal-revocation.md  security.md  storage.md  templates.md  webhooks.md
examples/: ayane.example.json
specs/: renew-loop.md  roots-signature.md
