[package]
name = "ayane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line client for the ayane certificate authority"

[[bin]]
name = "ayane"
path = "src/main.rs"

[dependencies]
ayane-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }

x509-cert = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
const-oid = { workspace = true }
pkcs8 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
pem = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

jsonwebtoken = { workspace = true }
