[package]
name = "ayane-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared wire protocol definitions for the ayane certificate authority"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
