[package]
name = "ayane-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared wire protocol definitions for the ayane certificate authority"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Shared X.509 / RFC 9421 signature verification (RustCrypto 0.7-generation).
const-oid = { workspace = true }
spki = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
digest = { workspace = true }
