[package]
name = "ayane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AWS-native step-ca-style X.509 certificate authority server"

[lib]
name = "ayane"
path = "src/lib.rs"

[[bin]]
name = "ayane-server"
path = "src/main.rs"

[dependencies]
ayane-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_dynamo = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
lambda_http = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
axum-server = { workspace = true }

x509-cert = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
const-oid = { workspace = true }
pkcs8 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
digest = { workspace = true }
hmac = { workspace = true }
signature = { workspace = true }
flagset = { workspace = true }
pem = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
humantime = { workspace = true }
rusqlite = { workspace = true }

jsonwebtoken = { workspace = true }

aws-config = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-smithy-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
aws-smithy-mocks = { workspace = true }
aws-sdk-kms = { workspace = true, features = ["test-util"] }
aws-sdk-eventbridge = { workspace = true, features = ["test-util"] }
aws-sdk-lambda = { workspace = true, features = ["test-util"] }
aws-sdk-dynamodb = { workspace = true, features = ["test-util"] }
tokio = { workspace = true, features = ["test-util"] }
